--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+ #map_wrapper {
+     height: 500px;
+ }
+
+ #map_canvas {
+     width: 100%;
+     height: 100%;
+ }
