--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <div class="navbar-brand">
         Century Link Crimes
-      </a>
+      </div>
     </div>
   </div>
 </nav>
