--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -15,8 +15,11 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <ul class="nav nav-pills nav-stacked" id="category-list">
-        </ul>
+        <div class="btn-group hello" data-toggle="buttons">
+
+        </div>
+        <!-- <ul class="nav nav-pills nav-stacked" id="category-list">
+        </ul> -->
       </div>
   </div>
 </div>
