WIP: transferring js code to controller

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -13,13 +13,11 @@
         <div id="map_wrapper">
           <div id="map_canvas" class="mapping"></div>
         </div>
+        <%= @data %>
       </div>
       <div class="col-sm-3">
-        <div class="btn-group hello" data-toggle="buttons">
-
+        <div class="btn-group">
         </div>
-        <!-- <ul class="nav nav-pills nav-stacked" id="category-list">
-        </ul> -->
       </div>
   </div>
 </div>
