--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,16 +17,139 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
- #map_wrapper {
-     height: 500px;
- }
+/* Map Styles */
 
- #map_canvas {
-     width: 100%;
-     height: 100%;
- }
+#map-wrapper {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; /* sets map behind */
+}
 
- .btn-custom {
+#map-canvas {
+  width: 100%;
+  height: 100%;
+}
+
+/* Toggle Styles */
+
+#wrapper {
+   padding-left: 0;
+   -webkit-transition: all 0.5s ease;
+   -moz-transition: all 0.5s ease;
+   -o-transition: all 0.5s ease;
+   transition: all 0.5s ease;
+}
+
+// #wrapper.toggled {
+//    padding-left: 250px;
+// }
+
+#sidebar-wrapper {
+   z-index: 1000;
+   position: fixed;
+   left: 250px;
+   width: 0;
+   height: 100%;
+   margin-left: -250px;
+   overflow-y: auto;
+   background: #000;
+   opacity: .85;
+   -webkit-transition: all 0.5s ease;
+   -moz-transition: all 0.5s ease;
+   -o-transition: all 0.5s ease;
+   transition: all 0.5s ease;
+}
+
+// #wrapper.toggled #sidebar-wrapper {
+//   width: 250px;
+// }
+
+/* Sidebar Styles */
+
+.category-group {
+  width: 100%;
+}
+
+.category-link {
+  width: 100%;
+  white-space: normal;
+}
+
+.sidebar-nav {
+   position: absolute;
+   top: 0;
    width: 100%;
-   white-space: normal;
- }
+   margin: 0;
+   padding: 0;
+   list-style: none;
+}
+
+
+.sidebar-nav li {
+   text-indent: 15px;
+   line-height: 40px;
+}
+
+.sidebar-nav li a {
+   display: block;
+   text-decoration: none;
+   color: #999999;
+}
+
+.sidebar-nav li a:hover {
+   text-decoration: none;
+   color: #fff;
+   background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+   text-decoration: none;
+   font-weight: bold;
+   color: #fff;
+}
+
+.sidebar-nav > .sidebar-brand {
+   height: 65px;
+   font-size: 18px;
+   line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+   color: #fff;
+   display: inline;
+}
+
+.sidebar-nav > .sidebar-brand a:hover, {
+   color: #fff;
+   background: none;
+}
+
+@media(min-width:768px) {
+   #wrapper {
+       padding-left: 250px;
+   }
+
+   #wrapper.toggled {
+       padding-left: 0;
+   }
+
+   #sidebar-wrapper {
+       width: 250px;
+   }
+
+   #wrapper.toggled #sidebar-wrapper {
+       width: 50px;
+   }
+
+   #wrapper.toggled #sidebar-wrapper .sidebar-brand #title {
+      display: none;
+   }
+
+   #wrapper.toggled #sidebar-wrapper .sidebar-nav .category-group {
+      display: none;
+   }
+}
