--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CenturyLinkCrimes</title>
+  <title>Century Link Crimes</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,5 +11,7 @@
 
 <%= yield %>
 
+<%= content_tag 'div', '', id: 'data', data: @data %>
+<script src="http://maps.googleapis.com/maps/api/js?&amp;callback=initialize"></script>
 </body>
 </html>
