--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -3,13 +3,23 @@
   <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/" id="title">Century Link Crimes</a>
-            <a href="/" id="menu-toggle"><span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a>
+            <div class="row">
+              <div class="col-xs-9">
+                <a href="/" id="title">Century Link Crimes</a>
+              </div>
+              <div class="col-xs-3">
+                <a href="/" id="menu-toggle"><span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a>
+              </div>
+            </div>
           </li>
-          <div class="category-group">
-            <% @categories.each do |category| %>
-              <li><a href="/" class="category-link"><%= category.capitalize %></a></li>
-            <% end %>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="category-group">
+                <% @categories.each do |category| %>
+                <li><a href="/" class="category-link"><%= category.capitalize %></a></li>
+                <% end %>
+              </div>
+            </div>
           </div>
       </ul>
   </div>
