--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
 <%= yield %>
 
 <%= content_tag 'div', '', id: 'data', data: @data %>
-<script src="http://maps.googleapis.com/maps/api/js?&amp;callback=initialize"></script>
+<script src="https://maps-api-ssl.google.com/maps/api/js?&amp;callback=initialize"></script>
 </body>
 </html>
