--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -14,6 +14,12 @@
           </li>
           <div class="row">
             <div class="col-xs-12">
+              <li class="msg">A visual display of crimes reported within 1 mile of Century Link Field, Seattle WA</li>
+              <li class="msg">Show by Event Clearance Subgroup: </li>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
               <div class="category-group">
                 <% @categories.each do |category| %>
                 <li><a href="/" class="category-link"><%= category.capitalize %></a></li>
