changes styling on message

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,7 +80,6 @@
 .category-group {
   width: 100%;
   line-height: 40px;
-  overflow: scroll;
 }
 
 .category-link {
@@ -105,8 +104,7 @@
 
 .msg {
   color: #fff;
-  padding-left: 20px;
-  padding-bottom: 10px;
+  padding: 0 20px 10px 20px;
 }
 
 .sidebar-nav li a {
