--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -14,8 +14,8 @@
           </li>
           <div class="row">
             <div class="col-xs-12">
-              <li class="msg">A visual display of crimes reported within 1 mile of CenturyLink field, Seattle WA</li>
-              <li class="msg">Show by subgroup: </li>
+              <li class="headings">A visual display of crimes reported within 1 mile of CenturyLink field, Seattle WA</li>
+              <li class="headings">Show by subgroup: </li>
             </div>
           </div>
           <div class="row">
